--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,87 @@
 	</tr>
 </table>
 
+<h2 class="date">28 July 2019: "No one reads names anyway"</h2>
+	<h3 class="author">TobyThorne updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Фикс розового квадрата при поднимании неаера.</li>
+			<li class="bugfix">Фикс розового квадрата при поднимании корги (включая Лизу и щенков).</li>
+			<li class="bugfix">Фикс спрайтов классической дубинки в руках.</li>
+			<li class="imageadd">Спрайты корги (включая Лизу и щенков) на голове.</li>
+			<li class="rscadd">Ящерицы доработаны примерно до уровня мышей.</li>
+			<li class="rscadd">Ящериц теперь можно поднимать.</li>
+			<li class="rscadd">Ящерицы и мыши будут убегать от людей, проходящих по ним.</li>
+			<li class="rscadd">NTNet Download Tool показывает отсортированный список программ.</li>
+			<li class="tweak">Возвращён старый спрайт шлема.</li>
+			<li class="tweak">СБ и детектив получили старые бронежилеты.</li>
+			<li class="tweak">Возвращён старый SWAT-шлем.</li>
+			<li class="rscadd">Добавлены beanie-шапки, шляпа визарда, раста-шапка, спрайт войсчейнжера для РИГа, скафандры ER.</li>
+			<li class="rscadd">...и сомбреро. Ищите на карте.</li>
+		</ul>
+
+	<h3 class="author">ZerlGray updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Спрайты воксов теперь работают.</li>
+			<li class="bugfix">Фиксы зрения генокрадов в темноте.</li>
+			<li class="rscdel">Вырезан рак.</li>
+			<li class="bugfix">(?) Вероятно починена невидимость лозы.</li>
+		</ul>
+
+	<h3 class="author">Vmihey updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">(?) Вероятно починены проблемы с протезами.</li>
+			<li class="bugfix">(?) Вероятно починены проблемы со светом.</li>
+			<li class="bugfix">Починены некоторые коктейли.</li>
+		</ul>
+
+	<h3 class="author">Plin updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscdel">Удалён дух нового года из жукбокса. Пора бы.</li>
+		</ul>
+
+	<h3 class="author">Tatarin updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Бриг</b></li>
+			<li class="tweak">45е заменены на кастомные пистолеты, с новыми спрайтами и звуками.</li>
+			<li class="maptweak">Коробки с осколочными унесли из оружейной. Слишком смертоносно.</li>
+			<li class="maptweak">Добавлены тактикульные джампсьюты.</li>
+			<li class="tweak">Заменены оверпаверд СВАТбутсы в оружейной на тактикал джекбутсы.</li>
+			<li class="tweak">В ящичек с офицерским шмотьем добавлены балаклавы.</li>
+			<li class="maptweak">Слегка украшен зал суда.</li>
+			<li class="maptweak">Заменены комбат белты в оружейной на комбат весты.</li>
+			<li class="maptweak">Пофикшены мертвые зоны камер в детективской, бриге и на стрельбище.</li>
+			<li class="maptweak">Убрана уязвимая зона в геттобриге.</li>
+			<li class="bugfix">Пофикшен доступ на дверях в геттобриге.</li>
+			<li class="maptweak">Добавлены перчатки криминалиста в офис детектива.</li>
+			<li class="tweak">Заменена бесполезная дубинка детектива на перцовку. Деревянные дубинки всё еще есть в геттобриге.</li>
+			<li><b>Инженерка</b></li>
+			<li class="maptweak">Провода к солнечным панелям теперь проведены по дефолту.</li>
+			<li class="maptweak"><b>Внимание! В активной зоне реактора теперь нет воздуха. Не отлично, но и не ужасно.</b></li>
+			<li class="maptweak">Добавлен автолат, устройство для покраски кабелей, нормальные фонарики и система охлаждения для синтов.</li>
+			<li class="maptweak">Минорные изменения: прожектор, доски, ноутбук, штуку для замены ламп, рулетку и тому подобное.</li>
+			<li><b>Изменения вне станции</b></li>
+			<li class="maptweak">Перепилен заброшенный аванпост на шахтерке.</li>
+			<li class="rscadd">У нюки наконец появились шлема к войдсьютам и магбутсы.</li>
+			<li class="rscadd">ЕРТшникам добавлены боевые дефибрилляторы.</li>
+			<li class="maptweak">Пофикшены шаттерсы на шаттле ЕРТ.</li>
+			<li class="maptweak">Добавлены на шахтерский аванпост: бочка с пивом, консоль мониторинга датчиков со стазис-мешком в медпункт.</li>
+			<li class="maptweak">Такая же консоль добавлена и в медпункт научного аванпоста. Как и стазис-мешок.</li>
+			<li><b>Прочие изменения</b></li>
+			<li class="bugfix">Пофикшен черный галстук. Теперь он черный!</li>
+			<li class="rscadd">Курткам детектива добавлена возможность застегнуть их.</li>
+			<li class="rscadd">Добавлен в шкаф детектива новый бронежилет, как альтернатива страшному зеленому нечто.</li>
+			<li class="maptweak">Переработана восточная часть дорм. Качалка, фитнес-вендор, отдельные спальни, бассейн теперь не лужа.</li>
+			<li class="soundadd">Новые звуки для большинства пистолетов и некоторых ПП.</li>
+			<li class="maptweak">Пофикшена смешная мусорка в карго.</li>
+			<li class="maptweak">В РнД добавлен принтер интегральных схем, с инструментами.</li>
+			<li class="maptweak">Рандомлут на синдишаттле в гетто. Теперь есть хоть какой-то смысл туда залезать.</li>
+			<li class="maptweak">Спрятал несколько вещей в техах. Развлекайтесь!</li>
+			<li class="tweak">Добавил бейдж-удостоверение журналиста для, собсно, журналиста.</li>
+			<li class="maptweak">Микроизменения в дормиторийском туалете, баре и капитанской.</li>
+			<li class="maptweak">Добавил камеры в подстанции.</li>
+			<li class="maptweak">И прочие мелкие изменения.</li>
+		</ul>
+
 <h2 class="date">6 July 2019: "Always (not) on time"</h2>
 	<h3 class="author">BlakeCrazy updated:</h3>
 		<ul class="changes bgimages16">
