Added changelog and message for panic bunker

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,14 @@
 	</tr>
 </table>
 
+<h2 class="date">2 August 2019</h2>
+	<h3 class="author">Vmihey, TobyThorne, Tatarin updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Жукбокс теперь снова играет, а не просто отнимает у вас деньги</li>
+			<li class="bugfix">Теперь на радкостюм и инженерный жилет можно нацепить счетчик гейгера</li>
+			<li class="bugfix">Минорные фиксы медицинской повязки и прочего</li>
+		</ul>
+		
 <h2 class="date">28 July 2019: "No one reads names anyway"</h2>
 	<h3 class="author">TobyThorne updated:</h3>
 		<ul class="changes bgimages16">
