--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,53 @@
 	</tr>
 </table>
 
+<h2 class="date">12 August 2019: "Just another brig in the wall"</h2>
+	<h3 class="author">Tatarin updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">В бриге произошли тактические перераспределения снаряжения.</li>
+			<li class="tweak">Пистолеты 45го по дефолту заряжены резиной, и в свободном доступе у офицерни есть только она.</li>
+			<li class="maptweak">Ящик с летальным боезапасом теперь требует доступа смотрителя.</li>
+			<li class="tweak">Место тактического набора занял СБшный РИГ.</li>
+			<li class="tweak">Добавил еще больше фонариков.</li>
+			<li class="bugfix">Пофиксил АПЦ в техах у брига.</li>
+			<li class="bugfix">Пофиксил доступ на кнопках в дормиториях.</li>
+			<li class="tweak">Добавил новый пистолет детективу в кейс. Аналог 45го, но под 9мм. Менее нуарный, чем текущие пушки.</li>
+			<li class="tweak">Вернул в детективскую плащ криминалиста.</li>
+		</ul>
+	
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>
+			<li class="maptweak">Фиксы бластов в отсеке с сингулярностью, теперь они не открываются от эми.</li>
+			<li class="maptweak">Фиксы камер наблюдения за сингулярностью, теперь за ними можно наблюдать по каналу Engine.</li>
+			<li class="maptweak">Возвращение смотровой площадки за сингулярностью, теперь с защитой от радиации.</li>
+			<li class="maptweak">Изменения отсека с двигателем сингулярности, теперь он не такой ангарный.</li>
+			<li class="maptweak">Добавление нитрогена в атмосферный отсек.</li>
+			<li class="maptweak">Изменение кухни, добавление туда новых устройств.</li>
+			<li class="maptweak">Улучшение техтоннелей.</li>
+			<li class="maptweak">Прочие мелкофиксы карты.</li>
+		</ul>
+	
+	<h3 class="author">TobyThorne updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Переработана система блокирования в бою</b></li>
+			<li class="tweak">Активный блок помимо замедления передвижения уменьшает регенерацию устойчивости на 40%</li>
+			<li class="tweak">Активный блок не сбивается при блокировании удара, но отключается бросками и выстрелами (при успешном блокировании/отражении).</li>
+			<li class="tweak">В активном блоке нельзя атаковать.</li>
+			<li class="tweak">Кулдаун переключения блока уменьшен с 0.5 секунд до 0.3.</li>
+			<li class="tweak">Убран порог устойчивости для дизарма. Шанс дизарма остаётся примерно прежним.</li>
+			<li class="tweak">Значительно увеличен шанс уронить цель при дизарме - порог устойчивости увеличен с 15 до 20.</li>
+			<li class="tweak">Пули теперь наносят урон по устойчивости цели, за счёт чего бинбэги и резиновые пули становятся действительно актуальными. Но они и близко не стоят с выстрелами ПТРа.</li>
+			<li class="tweak">Выстрелы в упор по лежачим целям наносят ещё в 2.5 раза больше урона. Добивай жертв красиво.</li>
+			<li class="tweak">Кнопка succumb теперь доступна гораздо раньше</li>
+			<li class="tweak">UNREAL SORD</li>
+		</ul>
+	
+	<h3 class="author">Vmihey updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Твики и фиксы игрового ядра</li>
+		</ul>
+ 
 <h2 class="date">2 August 2019</h2>
 	<h3 class="author">Vmihey, TobyThorne, Tatarin updated:</h3>
 		<ul class="changes bgimages16">
