--- a/html/changelog.html
+++ b/html/changelog.html
@@ -54,6 +54,8 @@
 			<li class="maptweak">Добавление нитрогена в атмосферный отсек.</li>
 			<li class="maptweak">Изменение кухни, добавление туда новых устройств.</li>
 			<li class="maptweak">Улучшение техтоннелей.</li>
+			<li class="maptweak">Временные фиксы электроснабжения, в частности увеличение запасов энергии со старта раунда, на время обучения новых игроков нюансам настройки сингулярного двигателя.</li>
+			<li class="maptweak">Добавление публичной зарядки для синтов в коридоре по пути во дворик.</li>
 			<li class="maptweak">Прочие мелкофиксы карты.</li>
 		</ul>
 	
