--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,15 @@
 	</tr>
 </table>
 
+<h2 class="date">13 August 2019</h2>
+	<h3 class="author">TobyThorne updated:</h3>
+		<ul class="changes bgimages16">>
+			<li class="rscadd">Добавлены офисные стулья, кресла, и кровати</li>
+			<li class="rscadd">Добавлены складные стулья (mousedrop на себя, чтобы сложить их)</li>
+			<li class="rscadd">Добавлены удобные кресла</li>
+			<li class="tweak">Подправлены рецепты крафта</li>
+		</ul>
+
 <h2 class="date">12 August 2019: "Just another brig in the wall"</h2>
 	<h3 class="author">Tatarin updated:</h3>
 		<ul class="changes bgimages16">
