--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,7 +32,7 @@
 
 <h2 class="date">13 August 2019</h2>
 	<h3 class="author">TobyThorne updated:</h3>
-		<ul class="changes bgimages16">>
+		<ul class="changes bgimages16">
 			<li class="rscadd">Добавлены офисные стулья, кресла, и кровати</li>
 			<li class="rscadd">Добавлены складные стулья (mousedrop на себя, чтобы сложить их)</li>
 			<li class="rscadd">Добавлены удобные кресла</li>
