--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,16 @@
 	</tr>
 </table>
 
+<h2 class="date">16 August 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Добавил новый отсек - с материей.</li>
+			<li class="maptweak">Пофиксил гравитационную аномалию у мостика.</li>
+			<li class="maptweak">Улучшил техтоннель у библиотеки, добавлена конструкторская комната.</li>
+			<li class="bugfix">Другие мелкофиксы, проводка, трубы и прочее.</li>
+		</ul>	
+
 <h2 class="date">14 August 2019</h2>
 	<h3 class="author">Vmihey updated:</h3>
 		<ul class="changes bgimages16">
