--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,17 @@
 	</tr>
 </table>
 
+<h2 class="date">20 August 2019</h2>
+	<h3 class="author">Vmihey updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Твики и фиксы игрового ядра</li>
+		</ul>
+
+	<h3 class="author">HONKERTRON updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Убрано размытие при увеличении спрайтов</li>
+		</ul>
+		
 <h2 class="date">16 August 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
