--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,23 @@
 	</tr>
 </table>
 
+<h2 class="date">25 August 2019</h2>
+	<h3 class="author">Vmihey updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Шаттл теперь вызывает авторестарт вновь</li>
+			<li class="bugfix">Введены дебаг иконки для починки невидимости лозы</li>
+		</ul>
+	
+	<h3 class="author">ARZUMATA updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscadd">Мим теперь умеет создавать невидимые стены</li>
+		</ul>
+	
+	<h3 class="author">FMajesty, LegatePritcher, kreeperHLC updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscadd">Добавлены события начала раунда</li>
+		</ul>
+		
 <h2 class="date">20 August 2019</h2>
 	<h3 class="author">Vmihey updated:</h3>
 		<ul class="changes bgimages16">
