--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,31 @@
 	</tr>
 </table>
 
+<h2 class="date">1 September 2019</h2>
+	<h3 class="author">Tatarin updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Обновлена карта шахт на астероиде</li>
+			<li class="bugfix">В шахтерский вендор добавлен улучшенный скафандр</li>
+    		<li class="bugfix">Изменен внешний вид шахтерского челнока</li>
+    		<li class="bugfix">Немного изменен шахтерский аванпост, переделан жилой отсек</li>
+    		<li class="bugfix">Добавлены две новые локации на шахтерку, и еще один новый скафандр на одну из них</li>
+    		<li class="bugfix">Наконец замапленны поручни</li>
+		</ul>
+	
+	<h3 class="author">Ifromspace updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Сингулярность теперь умеет путешествовать между z-уровнями</li>
+			<li class="bugfix">Bag of holding получил свои фичи назад</li>
+			<li class="bugfix">Приклеенную на скотч бумагу теперь можно откреплять обратно</li>
+			<li class="bugfix">Удалена возможность ИИ открывать дистанционно канистры с газом</li>
+		</ul>	
+	
+	<h3 class="author">kreeperHLC updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Обновлены интегральные платы</li>
+			<li class="bugfix">Мелкие фиксы</li>
+		</ul>
+	
 <h2 class="date">25 August 2019</h2>
 	<h3 class="author">Vmihey updated:</h3>
 		<ul class="changes bgimages16">
