--- a/html/changelog.html
+++ b/html/changelog.html
@@ -25,10 +25,32 @@
 		<td valign='top'>
 			<div align='center'><font size='3'><b>Список изменений сервера Chaotic Onyx</b></font></div>
 
-		<p><div align='center'><font size='3'><a href="https://wiki.ss13.ru/index.php?title=Main_Page">Вики Chaotic Onyx</a> | <a href="https://github.com/ChaoticOnyx/OnyxBay">Репозиторий</a></font></div></p>
+		<p><div align='center'><font size='3'><a href="https://wiki.ss13.ru/index.php?title=Main_Page">Вики</a> | <a href="https://github.com/ChaoticOnyx/OnyxBay">Репозиторий</a></font></div></p>
 			</td>
 	</tr>
 </table>
+
+<h2 class="date">10 September 2019</h2>
+	<h3 class="author">Voldirs updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="tweak">Обновлены ассортименты у торговцев</li>
+			<li class="bugfix">Абсолютно все торговцы теперь ротируются</li>
+			<li class="bugfix">Пофикшен воксо-торговец</li>
+			<li class="rscadd">Добавлен торговец скафандрами (софтсьюты, войдсьюты, риги, модули к ним, баллоны)</li>
+			<li class="rscadd">Добавлен торговец бронёй (бронежилеты, плэйткэрриеры, прибамбасы к ним и шлемы)</li>
+			<li class="tweak">Убраны некоторые торговцы, их ассортимент перенесён к другим</li>
+			<li class="bugfix">Пофикшены пути некоторых спрайтов</li>
+			<li class="maptweak">Измененен аванпост торговца: добавлены модульная консоль, речарджер, банкомат</li>
+			<li class="maptweak">Вендоры торговца более не требуют доступа</li>
+		</ul>
+		
+	<h3 class="author">Vmihey updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Некоторые интегральные платы использовали материалы, которых у нас нет</li>
+			<li class="bugfix">Мелкие фиксы для гостов</li>
+			<li class="bugfix">Исправлен выбор дополнительных языков</li>
+			<li class="bugfix">Киберконечности теперь имеют кибериконки. Кибервосхитительно<strike>, но может повлечь иные проблемы</strike></li>
+		</ul>
 
 <h2 class="date">1 September 2019</h2>
 	<h3 class="author">Tatarin updated:</h3>
