--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,16 @@
 	</tr>
 </table>
 
+<h2 class="date">13 September 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">Правки двигателя на суперматерии, теперь он работает нормально и стабильно.</li>
+			<li class="maptweak">Добавление различных новых кнопок в кабинет СЕ для более гибкого управления.</li>
+			<li class="maptweak">Бандольеры для дробовиков в оружейку.</li>
+			<li class="maptweak">Модификация инженерной комнаты мониторинга двигателей, добавление консоли суперматерии.</li>
+			<li class="maptweak">Фиксы труб, добавление канистр с водородом, правка водородной камеры в атмосферном отсеке.</li>
+		</ul>
+
 <h2 class="date">10 September 2019</h2>
 	<h3 class="author">Voldirs updated:</h3>
 		<ul class="changes bgimages16">
