--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,7 @@
 <h2 class="date">13 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
+			<li class="maptweak">Различные мелкие правки которые можно было реализовать в течении раунда по просьбам игроков.</li>
 			<li class="maptweak">Правки двигателя на суперматерии, теперь он работает нормально и стабильно.</li>
 			<li class="maptweak">Добавление различных новых кнопок в кабинет СЕ для более гибкого управления.</li>
 			<li class="maptweak">Бандольеры для дробовиков в оружейку.</li>
