--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,17 @@
 	</tr>
 </table>
 
+<h2 class="date">14 September 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">Сменено направление указателей эвакуации, с северной части (к подам), на южную часть (к старпорту).</li>
+			<li class="maptweak">Добавлено больше каталок в медотсек.</li>
+			<li class="maptweak">Добавлены различные имланты в арсенал.</li>
+			<li class="maptweak">Перенесены некоторое оружие с арсенала коробки.</li>
+			<li class="maptweak">Добавлен хольстер и умывальник в детективскую.</li>
+			<li class="maptweak">Пофикшена проблема с обесточиванием шахтерки.</li>
+		</ul>	
+
 <h2 class="date">13 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
