--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,18 @@
 	</tr>
 </table>
 
+<h2 class="date">18 September 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">Было внесено пару небольших правок в медбее.</li>
+			<li class="maptweak">Расширен отсек гидропоники, добавлено новое оборудование и небольшое пастбище.</li>
+			<li class="maptweak">Добавлены шторы в офис для квартирмейстера.</li>
+			<li class="maptweak">Добавлены таргеты для посылок в РнД и офис РД.</li>
+			<li class="maptweak">Пофикшена дверь в ядре ИИ, которая имела проблемы с доступами.</li>
+			<li class="maptweak">Бармену возвращен его шейкер, который украли котокрысы.</li>
+			<li class="maptweak">И другие правки о которых автор уже успел забыть.</li>
+		</ul>
+
 <h2 class="date">14 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
