--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,9 +30,25 @@
 	</tr>
 </table>
 
+<h2 class="date">23 September 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Были почищены мелкие баги вроде выключателя света на кухне.</li>
+			<li class="maptweak">Расширен космопорт, добавлены доки для новых шаттлов.</li>
+			<li class="maptweak">Введены или починены собственно сами новые шаттлы, о них дальше.</li>
+			<li class="maptweak">Починен шаттл спецопераций, базируется на ЦК.</li>
+			<li class="maptweak">Починен легкий транспортный шаттл, базируется на ЦК с выходом в общие отсеки.</li>
+			<li class="maptweak">Добавлен долгожданный шаттл торговца, стыковка рядом с вакантным офисом.</li>
+			<li class="maptweak">Добавлен административный шаттл, для использования во время ивентов.</li>
+			<li class="maptweak">Добавлен шаттл ЕРТ, имеет собственную базу.</li>
+			<li class="maptweak">Разблокирован шаттл бомжей/воксов/пиратов, ожидается прирост грабительских вылазок в сторону станции.</li>
+		</ul>
+	
 <h2 class="date">18 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
 			<li class="maptweak">Было внесено пару небольших правок в медбее.</li>
 			<li class="maptweak">Расширен отсек гидропоники, добавлено новое оборудование и небольшое пастбище.</li>
 			<li class="maptweak">Добавлены шторы в офис для квартирмейстера.</li>
@@ -45,6 +61,7 @@
 <h2 class="date">14 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
 			<li class="maptweak">Сменено направление указателей эвакуации, с северной части (к подам), на южную часть (к старпорту).</li>
 			<li class="maptweak">Добавлено больше каталок в медотсек.</li>
 			<li class="maptweak">Добавлены различные имланты в арсенал.</li>
@@ -56,6 +73,7 @@
 <h2 class="date">13 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
 			<li class="maptweak">Различные мелкие правки которые можно было реализовать в течении раунда по просьбам игроков.</li>
 			<li class="maptweak">Правки двигателя на суперматерии, теперь он работает нормально и стабильно.</li>
 			<li class="maptweak">Добавление различных новых кнопок в кабинет СЕ для более гибкого управления.</li>
