--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,14 @@
 	</tr>
 </table>
 
+<h2 class="date">24 September 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Обновлен дормиторий, добавлена качалка с коробки и пару новых комнат.</li>
+			<li class="maptweak">И другие мелкофиксы.</li>
+		</ul>	
+
 <h2 class="date">23 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
