--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,49 @@
 	</tr>
 </table>
 
+<h2 class="date">02 October 2019</h2>
+	<h3 class="author">Igorsaux updated:</h3>
+		<ul class="changes bgimages16">		
+			<li class="bugfix">Фикс бага с "облачками" сообщений над головами персонажей.</li>
+			<li class="bugfix">Кириллица в интерфейсе наноуи, теперь нормально отображается.</li>
+			<li class="bugfix">Пофикшен вынос предметов с голодека.</li>
+			<li class="rscadd">Добавил тени предметам и объектам в игре.</li>
+			<li class="tweak">Переработка системы слоев внутри билда.</li>
+		</ul>	
+	<h3 class="author">Ifromspace updated:</h3>
+		<ul class="changes bgimages16">		
+			<li class="tweak">Обновление внутриигрового события "Вспышка вируса".</li>
+			<li class="rscadd">Добавлено несколько новых разновидностей вирусов разной степени тяжести.</li>
+		</ul>	
+	<h3 class="author">MrPersival updated:</h3>
+		<ul class="changes bgimages16">		
+			<li class="rscadd">В автолате теперь можно распечатать мачете с приличными характеристиками, но и за соответствующую цену.</li>
+		</ul>	
+	<h3 class="author">Wolfish updated:</h3>
+		<ul class="changes bgimages16">		
+			<li class="bugfix">Фиксы курток и водолазок в лоадауте.</li>
+			<li class="rscadd">Добавил новые прически в панели настройки персонажей.</li>
+		</ul>	
+	<h3 class="author">Tatarin updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Exodus</b></li>			
+			<li class="maptweak">Добавление сингулярного двигателя в инженерный отсек.</li>
+		</ul>	
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="tweak">Переработка административных хоткеев, немного больше удобства нашим бедным педаликам.</li>
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Обновление доступов в различные отсеки, теперь они еще более логичные, сокращение лишних доступов некоторым профессиям.</li>
+			<li class="maptweak">Фикс сетей камер большинства отсеков, плюс возобновление доступа к камерам тестового полигона.</li>
+			<li class="maptweak">Починка отвалившихся труб в медицинском отсеке, а также ремонт криоподов, теперь они морозят как никогда ранее.</li>
+			<li class="maptweak">Модернизация отсека сгорания в токсинах научного отсека, выдерживает больше давления и температуры.</li>
+			<li class="maptweak">Перенос заброшенных строений на астероиде с коробки.</li>
+			<li class="maptweak">Переделка комнат голодека на правую сторону.</li>
+			<li class="maptweak">Бригоправки: ребаланс вооружения арсенала, деангаризация лобби брига, прорублено окно к камерам заключенных.</li>
+			<li class="maptweak">Фикс помп и скрабберов в библиотеке.</li>
+			<li class="maptweak">И другие мелкоправки о которых автор уже позабыл.</li>
+		</ul>	
+	
 <h2 class="date">24 September 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
