--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,16 @@
 	</tr>
 </table>
 
+<h2 class="date">03 October 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Была немного расширена ксенофлора, для грядок.</li>
+			<li class="maptweak">В вирусологию добавил комнату для обезьян.</li>
+			<li class="maptweak">Заменены местами джукбокс и сигаретная машина в баре, а также перемещена точка спавна призраков на шаттла прибытия.</li>
+			<li class="maptweak">Добавлен второй биопринтер в коморку хирургов.</li>
+		</ul>
+	
 <h2 class="date">02 October 2019</h2>
 	<h3 class="author">Igorsaux updated:</h3>
 		<ul class="changes bgimages16">		
