--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,18 @@
 	</tr>
 </table>
 
+<h2 class="date">04 October 2019</h2>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">Слегка нерфанул имбомачете.</li>
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Добавлены хим- и кондимастеры в ксеноботанику, плюс комплект инструментов для работы второго человека.</li>
+			<li class="maptweak">Оптимизация пространства в медбее, все для удобства хирургов.</li>
+			<li class="maptweak">Добавил кнопки блокировки дверей в химию и хирургии, для внутреннего регулирования трафика самими игроками.</li>
+			<li class="maptweak">Раскидал синих шкафов по отсекам и основным коридорам на случай разгерм внутри станции.</li>
+			<li class="maptweak">Накидал немного больше декоративного оборудования в техтоннели, коридоры и добавил мезонки во дворик перед сингой.</li>
+		</ul>
+	
 <h2 class="date">03 October 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
