--- a/tgui-next/packages/tgui/public/tgui-main.html
+++ b/tgui-next/packages/tgui/public/tgui-main.html
@@ -10,6 +10,7 @@
 <!-- This is processed in byond, so interfaces can override the
   html head if needed, for custom sheets of style etc. -->
 <!--customheadhtml-->
+<!--[if lte IE 8]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 <script id="data" type="application/json" data-ref="[ref]">{}</script>
 
 </head>
