--- a/tgui-next/packages/tgui/public/tgui-main.html
+++ b/tgui-next/packages/tgui/public/tgui-main.html
@@ -10,7 +10,6 @@
 <!-- This is processed in byond, so interfaces can override the
   html head if needed, for custom sheets of style etc. -->
 <!--customheadhtml-->
-<!--[if lte IE 8]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 <script id="data" type="application/json" data-ref="[ref]">{}</script>
 
 </head>
@@ -24,8 +23,8 @@
 
 <!-- Scripts -->
 <script type="text/javascript">
-// Retrieve and save ref to a global variable
-var ref = document.getElementById('data').getAttribute('data-ref');
+// Mark the beginning
+window.__inception__ = new Date().getTime();
 // Early global error handling
 window.onerror = function (msg, url, line, col, error) {
   var logString = msg + ' (' + url + ' line ' + line + ')'
@@ -34,6 +33,7 @@ window.onerror = function (msg, url, line, col, error) {
   // NOTE: document.write() only works on IE8.
   document.write(logString);
   // Send to the backend
+  var ref = document.getElementById('data').getAttribute('data-ref');
   location.href = 'byond://?src=' + ref
     + '&action=tgui:log&error=true'
     + '&log=' + encodeURIComponent(logString);
