--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,27 @@
 	</tr>
 </table>
 
+<h2 class="date">23 October 2019</h2>
+	<h3 class="author">Support updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Много-много разных багфиксов, которые никто не расписал (ищу писателя чейнджлогов).</li>
+		</ul>
+	<h3 class="author">Rampo updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="tweak">Убрал капитанские и прочие коммандные картриджи из PTech вендора.</li>
+			<li><b>Eclipse</b></li>			
+			<li class="maptweak">Расширена библиотека.</li>
+			<li class="maptweak">Перенес музей цк с коробки.</li>
+			<li class="maptweak">Удлинил и отзеркалил шаттл эвакуации.</li>
+			<li class="maptweak">Расширил станционные доки, добавил комнату содержания заключенных перед отлетом.</li>
+			<li class="maptweak">Немного оптимизировал вооружение в арсенале.</li>
+			<li class="maptweak">Исправил доступ в техах возле вирусологии, добавил туда немного шкафчиков по запросу.</li>
+			<li class="maptweak">Добавил чарджеры в дормы для зарядки техники.</li>
+			<li class="maptweak">Починил трубы над робототехникой и помещении для помп в инженерке.</li>
+			<li class="maptweak">В целях эксперимента частично разобрал сингу, теперь к ее запуску можно подойти творчески и использовать собственную конфигурацию.</li>
+			<li class="maptweak">Прочий мелкий декор.</li>
+		</ul>
+	
 <h2 class="date">04 October 2019</h2>
 	<h3 class="author">Rampo updated:</h3>
 		<ul class="changes bgimages16">
