--- a/html/changelog.html
+++ b/html/changelog.html
@@ -48,7 +48,11 @@
 			<li class="maptweak">Добавил чарджеры в дормы для зарядки техники.</li>
 			<li class="maptweak">Починил трубы над робототехникой и помещении для помп в инженерке.</li>
 			<li class="maptweak">В целях эксперимента частично разобрал сингу, теперь к ее запуску можно подойти творчески и использовать собственную конфигурацию.</li>
+			<li class="maptweak">Вирусологу добавил перчатки, больше самплов и света в отсек.</li>
+			<li class="maptweak">В атмосферке сделал вывод в космос для ненужных газов.</li>
+			<li class="maptweak">Переделал дворик.</li>
 			<li class="maptweak">Прочий мелкий декор.</li>
+
 		</ul>
 	
 <h2 class="date">04 October 2019</h2>
