--- a/html/changelog.html
+++ b/html/changelog.html
@@ -42,6 +42,7 @@
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Пофикшен и улучшен скрипт генерации чейнджлога.</li>
+				<li class="rscadd">Добавлены психоскоп и нейромоды.</li>
 			</ul>
 			<h3 class="author">Rampo updated:</h3>
 			<ul class="changes bgimages16">
@@ -65,6 +66,113 @@
 				<li class="bugfix">Много-много разных багфиксов, которые никто не расписал (ищу писателя чейнджлогов).</li>
 			</ul>
 
+			<h2 class="date">22 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен рандомный способ выбора карты после конца раунда.</li>
+			</ul>
+
+			<h2 class="date">21 October 2019</h2>
+			<h3 class="author">MrPersival updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшен UI микроволновки.</li>
+			</ul>
+
+			<h2 class="date">20 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс рецепта модульного компьютера.</li>
+			</ul>
+
+			<h2 class="date">19 October 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Добавлено два новых дереликта.</li>
+				<li class="maptweak">Фикс астероида.</li>
+			</ul>
+
+			<h2 class="date">17 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшен кэш, теперь наноуи загружается так быстро - насколько это возможно.</li>
+				<li class="bugfix">Пофикшены слои у шкафчиков.</li>
+			</ul>
+
+			<h2 class="date">15 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс объявления законов.</li>
+				<li class="bugfix">Убран абуз спеллов.</li>
+			</ul>
+
+			<h2 class="date">14 October 2019</h2>
+			<h3 class="author">Fritcher36 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены пчёлы.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс размножения денег.</li>
+				<li class="bugfix">Фикс с пулом инвалидной коляски.</li>
+				<li class="bugfix">Фикс проверки дистанции при открытии окна интегралки.</li>
+				<li class="bugfix">Запрещена сборка лимиток в рюкзаке.</li>
+				<li class="bugfix">Фикс оверлея камер.</li>
+				<li class="bugfix">Фикс проблемы с телепортацией и дублировании в крио/слипере/бодисканере.</li>
+			</ul>
+
+			<h2 class="date">13 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшен режим отвёртки у мультитула.</li>
+				<li class="bugfix">Пофикшено использование тряпки через противогаз/шлем.</li>
+			</ul>
+
+			<h2 class="date">12 October 2019</h2>
+			<h3 class="author">LostHonk updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Персонажиголодают быстрее.</li>
+				<li class="tweak">Ограничение доступов к криоподам.</li>
+			</ul>
+
+			<h2 class="date">11 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Очки и зум не работают через камеры.</li>
+				<li class="bugfix">Добавлен проебавшийся спрайт линолеума.</li>
+				<li class="tweak">Теперь все предметы при подборе имеют плавную анимацию перемещения.</li>
+			</ul>
+
+			<h2 class="date">10 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен tgui2.</li>
+				<li class="bugfix">Пофикшены авто воуты.</li>
+			</ul>
+
+			<h2 class="date">09 October 2019</h2>
+			<h3 class="author">ifromspaceGANG updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены дефекты речи.</li>
+			</ul>
+
+			<h2 class="date">08 October 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Фикс шаттлов и конвееров.</li>
+			</ul>
+
+			<h2 class="date">06 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен оверлей для камер.</li>
+			</ul>
+
+			<h2 class="date">05 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Фикс скрабберов.</li>
+			</ul>
+
 			<h2 class="date">04 October 2019</h2>
 			<h3 class="author">Rampo updated:</h3>
 			<ul class="changes bgimages16">
@@ -74,6 +182,10 @@
 				<li class="maptweak">[Eclipse]: Добавил кнопки блокировки дверей в химию и хирургии, для внутреннего регулирования трафика самими игроками.</li>
 				<li class="maptweak">[Eclipse]: Раскидал синих шкафов по отсекам и основным коридорам на случай разгерм внутри станции.</li>
 				<li class="maptweak">[Eclipse]: Накидал немного больше декоративного оборудования в техтоннели, коридоры и добавил мезонки во дворик перед сингой.</li>
+			</ul>
+			<h3 class="author">ZerlGray updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Починен и обавлен режим хейст</li>
 			</ul>
 
 			<h2 class="date">03 October 2019</h2>
@@ -98,6 +210,7 @@
 				<li class="bugfix">Пофикшен вынос предметов с голодека.</li>
 				<li class="rscadd">Добавил тени предметам и объектам в игре.</li>
 				<li class="tweak">Переработка системы слоев внутри билда.</li>
+				<li class="bugfix">Пофикшены сенсоры аир алярма.</li>
 			</ul>
 			<h3 class="author">MrPersival updated:</h3>
 			<ul class="changes bgimages16">
