--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,17 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">25 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил тгу2и интерфейс.</li>
+			</ul>
+			<h3 class="author">Rampo updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Добавил шаттл инженерам, новый проход к камерам в бриге, улучшение приемки, дворика</li>
+				<li class="maptweak">Фикс некоторых доступов в техтоннели, электрификация щитов в тестах рнд, другие декоративные мелочи.</li>
+			</ul>
+
 			<h2 class="date">23 October 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
