--- a/html/changelog.html
+++ b/html/changelog.html
@@ -41,12 +41,19 @@
 			<h2 class="date">25 October 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Починил тгу2и интерфейс.</li>
+				<li class="bugfix">Починил tgui2 интерфейс.</li>
+				<li class="bugfix">Починил интерфейс ресливера.</li>
+				<li class="bugfix">Дополнительные фиксы психоскопа.</li>
+				<li class="rscadd">Добавил цели для трейторов на кражу психоскопа/нейромода.</li>
+				<li class="rscadd">Запилил новый кейс с психоскопом.</li>
+				<li class="rscadd">Добавил стрелки для переключения волос на голове и лице в сетапе.</li>
 			</ul>
 			<h3 class="author">Rampo updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="maptweak">Добавил шаттл инженерам, новый проход к камерам в бриге, улучшение приемки, дворика</li>
-				<li class="maptweak">Фикс некоторых доступов в техтоннели, электрификация щитов в тестах рнд, другие декоративные мелочи.</li>
+				<li class="maptweak">[Eclipse]: Добавил кейс с психоскопом к РД.</li>
+				<li class="maptweak">[Eclipse]: Добавил шаттл инженерам, новый проход к камерам в бриге, улучшение приемки, дворика.</li>
+				<li class="maptweak">[Eclipse]: Фикс барной вывески.</li>
+				<li class="maptweak">[Eclipse]: Фикс некоторых доступов в техтоннели, электрификация щитов в тестах рнд, другие декоративные мелочи.</li>
 			</ul>
 
 			<h2 class="date">23 October 2019</h2>
