--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,23 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 October 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Убран телепорт наемников.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Убран обжектив на кражу нейромода.</li>
+				<li class="bugfix">Фикс сообщений от психоскопа.</li>
+			</ul>
+			
+			<h2 class="date">27 October 2019</h2>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Минорные фиксы психоскопа. Был вернут восьмой IE для tgui.</li>
+			</ul>
+			
 			<h2 class="date">25 October 2019</h2>
 			<h3 class="author">Igorsaux updated:</h3>
 			<ul class="changes bgimages16">
