--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,16 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">29 October 2019</h2>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Починен и возвращён режим Чужих.</li>
+			</ul>
+			<h3 class="author">Igorsaux updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшен абуз привязывания к стульям во время контузии.</li>
+			</ul>
+			
 			<h2 class="date">28 October 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
