--- a/html/changelog.html
+++ b/html/changelog.html
@@ -38,6 +38,24 @@
 
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">31 October 2019</h2>
+			<h3 class="author">Rampo updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Крупный редизайн станции под хеллоуин, начиная от банального декора и заканчивая завозом в оружейную экипировки культа.</li>
+				<li class="maptweak">[Eclipse]: Разнообразные мапфиксы.</li>
+			</ul>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Хеллоуиниское преобразование карты с соответствующим декором и тыквами.</li>
+			</ul>
+			
+			<h2 class="date">30 October 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Exodus]: Добавлен кейс с психоскопом к РД.</li>
+				<li class="maptweak">[Exodus]: Фикс научного шаттла и остальные минорные фиксы карты.</li>
+			</ul>
+			
 			<h2 class="date">29 October 2019</h2>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
